if (GST_ENABLE_AUDIO_PLUGINS)

# GStreamer plugin.
set(GST_QTI_C2_ADEC gstqtic2adec)

add_library(${GST_QTI_C2_ADEC} SHARED
  c2adec.c
)

target_include_directories(${GST_QTI_C2_ADEC} PRIVATE
  ${CMAKE_SOURCE_DIR}
  ${GST_INCLUDE_DIRS}
)

target_link_libraries(${GST_QTI_C2_ADEC} PRIVATE
  ${GST_LIBRARIES}
  ${GST_ALLOC_LIBRARIES}
  ${GST_VIDEO_LIBRARIES}
  ${GST_AUDIO_LIBRARIES}
  ${GST_PBUTILS_LIBRARIES}
  gstqtiutilsbase
  c2engine
)

install(
  TARGETS ${GST_QTI_C2_ADEC}
  LIBRARY DESTINATION ${GST_PLUGINS_QTI_OSS_INSTALL_LIBDIR}/gstreamer-1.0
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
              GROUP_EXECUTE GROUP_READ
              WORLD_EXECUTE WORLD_READ
)

endif()