# GStreamer plugin.
set(GST_QTI_C2_VDEC_DEC gstqtic2vdec)

add_library(${GST_QTI_C2_VDEC_DEC} SHARED
  c2vdec.c
)

target_compile_definitions(${GST_QTI_C2_VDEC_DEC} PRIVATE
  $<$<STREQUAL:${GST_CODEC2_CONFIG_VERSION},2.0>:CODEC2_CONFIG_VERSION_2_0>
  $<$<STREQUAL:${GST_CODEC2_CONFIG_VERSION},1.0>:CODEC2_CONFIG_VERSION_1_0>
)

target_include_directories(${GST_QTI_C2_VDEC_DEC} PRIVATE
  ${CMAKE_SOURCE_DIR}
  ${GST_INCLUDE_DIRS}
)

target_link_libraries(${GST_QTI_C2_VDEC_DEC} PRIVATE
  ${GST_LIBRARIES}
  ${GST_ALLOC_LIBRARIES}
  ${GST_VIDEO_LIBRARIES}
  c2engine
)

install(
  TARGETS ${GST_QTI_C2_VDEC_DEC}
  LIBRARY DESTINATION ${GST_PLUGINS_QTI_OSS_INSTALL_LIBDIR}/gstreamer-1.0
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
              GROUP_EXECUTE GROUP_READ
              GROUP_EXECUTE GROUP_READ
)
