# GStreamer plugin.
set(GST_QTI_C2_VENC gstqtic2venc)

add_library(${GST_QTI_C2_VENC} SHARED
  c2venc.cc
)

target_include_directories(${GST_QTI_C2_VENC} PRIVATE
  ${CMAKE_SOURCE_DIR}
  ${GST_INCLUDE_DIRS}
)

target_link_libraries(${GST_QTI_C2_VENC} PRIVATE
  ${GST_LIBRARIES}
  ${GST_ALLOC_LIBRARIES}
  ${GST_VIDEO_LIBRARIES}
  c2engine
)

install(
  TARGETS ${GST_QTI_C2_VENC}
  LIBRARY DESTINATION ${GST_PLUGINS_QTI_OSS_INSTALL_LIBDIR}/gstreamer-1.0
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
              GROUP_EXECUTE GROUP_READ
              WORLD_EXECUTE WORLD_READ
)
