# GStreamer plugin.
set(GST_QTI_C2_VENC gstqtic2venc)

add_library(${GST_QTI_C2_VENC} SHARED
  c2venc.c
)

math(EXPR VERSION_MAJOR "${GST_CODEC2_CONFIG_VERSION_MAJOR} + 0")
math(EXPR VERSION_MINOR "${GST_CODEC2_CONFIG_VERSION_MINOR} + 0")

target_compile_definitions(${GST_QTI_C2_VENC} PRIVATE
  CODEC2_CONFIG_VERSION_MAJOR=${VERSION_MAJOR}
  CODEC2_CONFIG_VERSION_MINOR=${VERSION_MINOR}
)

target_include_directories(${GST_QTI_C2_VENC} PRIVATE
  ${GST_INCLUDE_DIRS}
  ${GST_QCOM_UTILS_INCLUDE_DIRS}
)

target_link_libraries(${GST_QTI_C2_VENC} PRIVATE
  c2engine_interface
  ${GST_LIBRARIES}
  ${GST_ALLOC_LIBRARIES}
  ${GST_VIDEO_LIBRARIES}
  ${GST_QCOM_UTILS_LIBRARIES}
  c2engine
)

install(
  TARGETS ${GST_QTI_C2_VENC}
  LIBRARY DESTINATION ${GST_PLUGINS_QTI_OSS_INSTALL_LIBDIR}/gstreamer-1.0
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
              GROUP_EXECUTE GROUP_READ
              WORLD_EXECUTE WORLD_READ
)
